packages/core/src/components/atoms/card-header/card-header.component.scss
p-card-header {
	@apply mx-4 h-14 flex-shrink-0;
	@apply flex gap-3 items-center;
	@apply text-storm-medium;
	@apply border-b border-b-mystic-medium #{!important};

	.title {
		@apply order-2;
		@apply flex items-center text-storm;
		@apply font-semibold;

		> p-icon {
			@apply ml-2 text-mystic-dark;
		}
	}

	[slot='prefix'] {
		@apply order-1;
	}

	[slot='suffix'] {
		@apply order-3;
	}
}

p-card-container.has-hover:hover {
	p-card-header {
		.title > p-icon {
			@apply text-indigo;
		}
	}
}

